build/log/idf_py_stderr_output_5018
Command: make -j 6 all
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c: In function 'echo_task':
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:51:34: error: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Werror=pointer-sign]
   51 |       strncpy(buff, data, strlen(data));
      |                                  ^~~~
      |                                  |
      |                                  uint8_t * {aka unsigned char *}
In file included from /home/tathuan/esp-idf/components/log/include/esp_log_args.h:10,
                 from /home/tathuan/esp-idf/components/log/include/esp_log.h:21,
                 from /home/tathuan/esp-idf/components/esp_common/include/esp_check.h:9,
                 from /home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:8:
/home/tathuan/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/picolibc/include/string.h:162:18: note: expected 'const char *' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  162 | size_t   strlen (const char *);
      |                  ^~~~~~~~~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:51:21: error: pointer targets in passing argument 2 of 'strncpy' differ in signedness [-Werror=pointer-sign]
   51 |       strncpy(buff, data, strlen(data));
      |                     ^~~~
      |                     |
      |                     uint8_t * {aka unsigned char *}
/home/tathuan/.espressif/tools/riscv32-esp-elf/esp-15.2.0_20251204/riscv32-esp-elf/picolibc/include/string.h:171:37: note: expected 'const char * restrict' but argument is of type 'uint8_t *' {aka 'unsigned char *'}
  171 | char    *strncpy (char *__restrict, const char *__restrict, size_t);
      |                                     ^
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:52:15: error: switch quantity not an integer
   52 |       switch (data) {
      |               ^~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:53:20: error: multi-character character constant [-Werror=multichar]
   53 |       case data == 'IDLE':
      |                    ^~~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:53:17: error: comparison between pointer and integer [-Werror]
   53 |       case data == 'IDLE':
      |                 ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:53:7: error: case label does not reduce to an integer constant
   53 |       case data == 'IDLE':
      |       ^~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:56:20: error: multi-character literal with 5 characters exceeds 'int' size of 4 bytes [-Werror]
   56 |       case data == 'START':
      |                    ^~~~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:56:17: error: comparison between pointer and integer [-Werror]
   56 |       case data == 'START':
      |                 ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:56:7: error: case label does not reduce to an integer constant
   56 |       case data == 'START':
      |       ^~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:59:20: error: multi-character character constant [-Werror=multichar]
   59 |       case data == 'RUN':
      |                    ^~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:59:17: error: comparison between pointer and integer [-Werror]
   59 |       case data == 'RUN':
      |                 ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:59:7: error: case label does not reduce to an integer constant
   59 |       case data == 'RUN':
      |       ^~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:62:20: error: multi-character character constant [-Werror=multichar]
   62 |       case data == 'END':
      |                    ^~~~~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:62:17: error: comparison between pointer and integer [-Werror]
   62 |       case data == 'END':
      |                 ^~
/home/tathuan/Project_B/usb_serial_jtag_echo/main/usb_serial_echo_main.c:62:7: error: case label does not reduce to an integer constant
   62 |       case data == 'END':
      |       ^~~~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/usb_serial_echo_main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4813: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
